--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@reach/router": "^1.3.4",
     "@tailwindcss/custom-forms": "^0.2.1",
     "@tensorflow-models/body-pix": "^2.0.5",
+    "@tensorflow-models/posenet": "^2.2.1",
     "@tensorflow/tfjs": "^2.7.0",
+    "@tensorflow/tfjs-backend-wasm": "^2.7.0",
     "@tensorflow/tfjs-backend-webgl": "^2.7.0",
     "@tensorflow/tfjs-converter": "^2.7.0",
     "@tensorflow/tfjs-core": "^2.7.0",
     "base64-blob": "^1.4.1",
+    "framer-motion": "^2.9.5",
     "gatsby": "^2.24.80",
     "gatsby-image": "^2.4.9",
     "gatsby-plugin-manifest": "^2.4.14",
